allUsers list made completely

--- a/SelectionCommittee_/src/main/resources/messages/messages_en.properties
+++ b/SelectionCommittee_/src/main/resources/messages/messages_en.properties
@@ -3,6 +3,7 @@ lang.title = Selection Committee
 lang.go.to.reg = Go To Registration Page
 lang.welcome = Welcome
 lang.user.name = User name
+lang.user.name.caps = USER NAME
 lang.password = Password
 lang.error.login = User Name or Password invalid, please verify
 lang.login = Login
@@ -15,16 +16,25 @@ lang.second.name = Second Name
 lang.city = City
 lang.district = District
 lang.institution.name = Institution Name
-lang.email = Email
+lang.email = E-mail
+lang.email.caps = E-MAIL
 lang.reg.user = Register User
 lang.success.reg = User has been registered successfully
 
 lang.logout = Logout
+lang.back = Back
 
 lang.error.occurred = Error occurred
 lang.error.occurred.text = An error has occurred. Please contact the administrator
 
 lang.all.users = All users
+lang.applicants.list = Applicants list
+lang.users.not.found = No Records found!
+lang.delete.user = DELETE USER
+lang.delete.button = Delete
+lang.block.user = BLOCK/UNBLOCK
+lang.block.button = Block
+lang.unblock.button = Unblock
 
 lang.reg.on.faculty = Registration on faculty
 lang.show.applications = My applications
