allFaculty list in progress

--- a/SelectionCommittee_/src/main/resources/messages/messages_en.properties
+++ b/SelectionCommittee_/src/main/resources/messages/messages_en.properties
@@ -29,12 +29,27 @@ lang.error.occurred.text = An error has occurred. Please contact the administrat
 
 lang.all.users = All users
 lang.applicants.list = Applicants list
-lang.users.not.found = No Records found!
+lang.not.found = No Records found!
 lang.delete.user = DELETE USER
 lang.delete.button = Delete
 lang.block.user = BLOCK/UNBLOCK
 lang.block.button = Block
 lang.unblock.button = Unblock
+
+lang.all.faculties = All faculties
+lang.faculties.list = Faculties list
+lang.faculty.university.id = UNIVERSITY ID
+lang.faculty.name = Faculty name
+lang.faculty.name.caps = FACULTY NAME
+lang.faculty.licensed = Licensed volume
+lang.faculty.licensed.caps = LICENSED VOLUME
+lang.faculty.budget = Amount of budget places
+lang.faculty.budget.caps = AMOUNT OF BUDGET PLACES
+lang.faculty.edit = Edit
+lang.faculty.edit.caps = EDIT
+lang.faculty.delete.caps = DELETE
+lang.faculty.add = Add
+lang.faculty.add.caps = ADD
 
 lang.reg.on.faculty = Registration on faculty
 lang.show.applications = My applications
