--- a/SelectionCommittee_/src/main/resources/messages/messages_en.properties
+++ b/SelectionCommittee_/src/main/resources/messages/messages_en.properties
@@ -38,7 +38,8 @@ lang.unblock.button = Unblock
 
 lang.all.faculties = All faculties
 lang.faculties.list = Faculties list
-lang.faculty.university.id = UNIVERSITY ID
+lang.faculty.university.id.caps = UNIVERSITY ID
+lang.faculty.university.id = University ID
 lang.faculty.name = Faculty name
 lang.faculty.name.caps = FACULTY NAME
 lang.faculty.licensed = Licensed volume
@@ -49,7 +50,10 @@ lang.faculty.edit = Edit
 lang.faculty.edit.caps = EDIT
 lang.faculty.delete.caps = DELETE
 lang.faculty.add = Add
-lang.faculty.add.caps = ADD
+lang.faculty.add.faculty = Add faculty
 
 lang.reg.on.faculty = Registration on faculty
 lang.show.applications = My applications
+
+lang.faculty.register = Register
+lang.faculty.register.caps = REGISTER
