--- a/SelectionCommittee/src/main/resources/messages/messages_en.properties
+++ b/SelectionCommittee/src/main/resources/messages/messages_en.properties
@@ -51,6 +51,7 @@ lang.faculty.edit.caps = EDIT
 lang.faculty.delete.caps = DELETE
 lang.faculty.add = Add
 lang.faculty.add.faculty = Add faculty
+lang.update.fac = Update faculty
 
 lang.reg.on.faculty = Registration on faculty
 lang.show.applications = My applications
