registerOnFaculty done applications done

--- a/SelectionCommittee/src/main/resources/messages/messages_en.properties
+++ b/SelectionCommittee/src/main/resources/messages/messages_en.properties
@@ -55,6 +55,8 @@ lang.update.fac = Update faculty
 
 lang.reg.on.faculty = Registration on faculty
 lang.show.applications = My applications
+lang.faculty.number.of.application = \u2116
 
 lang.faculty.register = Register
 lang.faculty.register.caps = REGISTER
+lang.faculty.registered = Registered
